# neo-reels-backend

./: Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/routes/: __init__.py  auth.py  feed.py  videos.py
app/core/: config.py  database.py  errors.py  logging.py  security.py
app/models/: __init__.py  user.py  video.py
app/schemas/: auth.py  user.py  video.py
app/services/: storage.py
app/tasks/: transcode.py  worker.py
migrations/: env.py  script.py.mako
migrations/versions/: 001_init.py
scripts/: curl_examples.sh  demo_upload.sh  seed.py
